# deriva-groups

./: .coveragerc  .dockerignore  .gitignore  Dockerfile  Makefile  README.md  pyproject.toml
.github/workflows/: deriva-groups.yaml
config/: deriva-groups.env  groups_config.json  wsgi_deriva_groups.conf.in
deriva/web/groups/: app.py  wsgi.py
deriva/web/groups/api/: util.py
deriva/web/groups/api/groups/: __init__.py  common.py  email_service.py  group_manager.py  join_request_manager.py  models.py
deriva/web/groups/api/storage/: core.py
deriva/web/groups/api/storage/backends/: __init__.py  base.py  memory.py  redis.py  sqlite.py
deriva/web/groups/rest/: groups.py  join_requests.py
deriva/web/groups/telemetry/: __init__.py
deriva/web/groups/telemetry/audit/: logger.py
deriva/web/groups/telemetry/metrics/: prometheus.py
test/: conftest.py
test/unit/api/: test_email_service.py  test_group_manager.py  test_join_request_manager.py  test_models.py  test_storage_backend.py  test_storage_core.py  test_util.py
test/unit/rest/: test_rest_groups.py  test_rest_join_requests.py
